style: fixed mobile styling for status filter on mobile

--- a/src/app/components/filter-catch/filter-catch.component.scss
+++ b/src/app/components/filter-catch/filter-catch.component.scss
@@ -64,6 +64,12 @@
     margin-top: 0.7rem;
     padding: 0 4px 8px 4px;
   }
+
+  app-range-slider {
+    display: block;
+    margin-bottom: 1rem;
+    width: 75%;
+  }
 }
 
 h2 {
